# wasm-engine-poc

./: .gitignore  Cargo.toml  README.md
assets/: vid.mov
libs/hasura-authn-core/: Cargo.toml  README.md
libs/lang-graphql/: Cargo.toml  README.md
libs/open-dds/: Cargo.toml  README.md  metadata.jsonschema
libs/open-dds/examples/: reference.json
libs/open-dds/src/: commands.rs  data_connector.rs  flags.rs  lib.rs  models.rs  ndc_client.rs  permissions.rs  relationships.rs  runtime.rs  session_variables.rs  types.rs
libs/open-dds/src/data_connector/: v1.rs  v2.rs
libs/open-dds/src/ndc_client/: apis.rs  models.rs
src/: execute.rs  lib.rs  schema.rs  utils.rs
src/execute/: operation.rs  process_response.rs  query_plan.rs  remote_joins.rs
src/schema/: model_tracking.rs  operations.rs  types.rs
www/: bootstrap.js  configuration.json  index.ts  metadata.json  package-lock.json  package.json  response.json  tsconfig.json  webpack.config.js
www/connector/: query.ts
www/public/: bootstrap.js  index.html  index_ts-node_assert-node_async_hooks-node_diagnostics_channel-node_dns-node_events-node_http-c7cb37.bootstrap.js  index_ts.bootstrap.js  node_modules_graphiql_react_dist_brace-fold_es_js.bootstrap.js  node_modules_graphiql_react_dist_closebrackets_es_js.bootstrap.js  node_modules_graphiql_react_dist_codemirror_es_js.bootstrap.js  node_modules_graphiql_react_dist_comment_es_js.bootstrap.js  node_modules_graphiql_react_dist_dialog_es_js.bootstrap.js  node_modules_graphiql_react_dist_foldgutter_es_js.bootstrap.js  node_modules_graphiql_react_dist_hint_es2_js.bootstrap.js  node_modules_graphiql_react_dist_hint_es_js.bootstrap.js  node_modules_graphiql_react_dist_info-addon_es_js.bootstrap.js  node_modules_graphiql_react_dist_jump-to-line_es_js.bootstrap.js  node_modules_graphiql_react_dist_jump_es_js.bootstrap.js  (+19 more)
www/utils/: log.js
(+28 files in other folders)
