[package]
name = "wasm_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.89"
serde-wasm-bindgen = "0.6.2"
lang-graphql = { path = "libs/lang-graphql" }
open-dds = { path = "libs/open-dds" }
hasura-authn-core = { path = "libs/hasura-authn-core" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
indexmap = { version = "2", features = ["serde"] }
thiserror = "1.0"
itertools = "0.12.0"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
strum = { version = "^0.25.0" }
strum_macros = { version = "^0.25.2" }
derive_more = "0.99.17"
base64 = "0.21.2"
transitive = "0.5.0"
lazy_static = "1.4.0"
url = "2.4.1"

[lib]
crate-type = ["cdylib"]