[package]
name = "open-dds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
getrandom = { version = "0.2.11", features = ["js"] }
# ndc-client = { git = "https://github.com/hasura/ndc-spec.git", tag = "v0.1.0-rc.12" }
schemars = { version = "0.8.15", features = ["smol_str", "preserve_order", "indexmap2"] }
serde = { version="1.0.152", features=["derive"] }
serde_json = { version = "1.0.92", features = ["preserve_order"] }
serde-untagged = "0.1.1"
thiserror = "1.0"
lazy_static = "1.4.0"
lang-graphql = { path = "../lang-graphql" }
indexmap = { version = "2", features = ["serde"] }
strum = { version = "^0.25.0" }
strum_macros = { version = "^0.25.2" }
serde_with = "3.4.0"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
url = "2.4.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
goldenfile = "^1.4.5"
